--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 							<ul class="contact-info list-unstyled">
 								<li><i class="fa fa-home"></i> At-kudavalli, post-kallabbe, tq-kumta, dist-uttara kannada, pin-581362</li>
 								<li><i class="fa fa-phone"></i> <a href="tel:+91 8971632243">+91 8971632243</a></li>
-								<li><i class="fa fa-envelope"></i> <a href="mailto:shettyarun.1999@gmail.com">sales@yourwebsite.com</a></li>
+								<li><i class="fa fa-envelope"></i> <a href="mailto:shettyarun.1999@gmail.com">shettyarun.1999@gmail.com</a></li>
 							</ul><!-- end contact-info  -->
 							
 							<ul class="list-inline list-social clearfix">
