--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -49,7 +49,7 @@
 							</div><!--End navbar-header -->
 							<div id="navbar" class="navbar-collapse collapse">
 								<ul class="nav navbar-nav navbar-right">
-									<li><a class="menubgactive" href="index.html">Back To Home</a></li>
+									<li><a class="menubgactive" href="index-6.html">Back To Home</a></li>
 								</ul>
 							</div><!--End navbar -->
 						</nav>
@@ -98,7 +98,7 @@
 						The most common types of recommendation systems are content-based and collaborative filtering recommender systems. In collaborative filtering, the behavior of a group of users is used to make recommendations to other users. The recommendation is based on the preference of other users. A simple example would be recommending a movie to a user based on the fact that their friend liked the movie. There are two types of collaborative models Memory-based methods and Model-based methods. The advantage of memory-based techniques is that they are simple to implement and the resulting recommendations are often easy to explain</p>
 					</div><!-- end portfolio-content -->
 					
-					<a class="btn btn-project btn-shutter-out-horizontal" href="media/omrs..pdf" target="_blank">Go To Project Report</a>
+					<a class="btn btn-project btn-shutter-out-horizontal" href="media/omrs..pdf" target="_blank">Go To Project</a>
 					
 					<!-- start share-icon -->	
 					<div class="share-icon">
