--- a/index-3.html
+++ b/index-3.html
@@ -70,67 +70,44 @@
 	<!-- end Header -->
 	
 	<!-- start slider and home section -->
-	<section id="home" class="home">
-        <div class="home-top-banner banner-1">
-            <div class="display-table">
-                <div class="display-table-cell">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-12">
-								<div class="banner-content banner-content-fullwidth">
-									<h3>Hi, I'm</h3>
-									<h1 class="header-title-text type-animate">
-										<a href="" class="typewrite" data-period="2000" data-type='[ "Emma Jones", "Proffessional", "Creative Director", "From United States" ]'>
-										<span class="wrap"></span>
-										</a>&nbsp;
-									</h1>
-									<ul class="list-inline list-social">
-										<li>
-											<a href="#" class="social-icon social-icon-facebook">
-												<i class="fa fa-facebook"></i>
-												<i class="fa fa-facebook"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="social-icon social-icon-twitter">
-												<i class="fa fa-twitter"></i>
-												<i class="fa fa-twitter"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="social-icon social-icon-gplus">
-												<i class="fa fa-google-plus"></i>
-												<i class="fa fa-google-plus"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="social-icon social-icon-vimeo">
-												<i class="fa fa-vimeo"></i>
-												<i class="fa fa-vimeo"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="social-icon social-icon-pinterest">
-												<i class="fa fa-pinterest"></i>
-												<i class="fa fa-pinterest"></i>
-											</a>
-										</li>
-										<li>
-											<a href="#" class="social-icon social-icon-linkedin">
-												<i class="fa fa-linkedin"></i>
-												<i class="fa fa-linkedin"></i>
-											</a>
-										</li>
-									</ul>
-								</div><!--End banner-content -->
-							</div><!--End col-sm-12 -->
-                        </div><!--End row -->
-                    </div><!--End container -->
-                </div><!--End display-table-cell -->
-            </div><!--End display-table -->
-        </div><!--End home-top-banner -->
+	<section id="home" class="home-slider home-top-banner image-bg">		
+		<div id="home-carousel" class="owl-carousel">
+			<div class="owl-slide">
+				<div class="slider-content">
+					<div class="slider-caption">
+						<div class="caption-container">
+							<h2 class="banner-title-text"><span>Hi, I'm </span>Emma Jones</h2>
+							<h4>Proffessional &amp; Creative Director</h4>
+							<a class="btn btn-shutter-out-horizontal btn-transparent" href="contact.html">CONTACT</a>
+						</div><!-- end caption-container -->
+					</div><!-- end slider-caption -->
+				</div><!-- end slider-content -->
+			</div><!-- end owl-slide -->
+			<div class="owl-slide">
+				<div class="slider-content">
+					<div class="slider-caption">
+						<div class="caption-container">
+							<h2 class="banner-title-text"><span>Hi, I'm </span>Proffessional</h2>
+							<h4>Proffessional &amp; Creative Director</h4>
+							<a class="btn btn-shutter-out-horizontal btn-transparent" href="contact.html">CONTACT</a>
+						</div><!-- end caption-container -->
+					</div><!-- end slider-caption -->
+				</div><!-- end slider-content -->
+			</div><!-- end owl-slide -->
+			<div class="owl-slide">
+				<div class="slider-content">
+					<div class="slider-caption">
+						<div class="caption-container">
+							<h2 class="banner-title-text"><span>Hi, I'm </span>Creative Director</h2>
+							<h4>From United States</h4>
+							<a class="btn btn-shutter-out-horizontal btn-transparent" href="contact.html">CONTACT</a>
+						</div><!-- end caption-container -->
+					</div><!-- end slider-caption -->
+				</div><!-- end slider-content -->
+			</div><!-- end owl-slide -->
+		</div><!--End owl-carousel -->		
 	</section>
-	<!-- end slider and home section -->
+	<!-- end slider section -->
 	
 	<!-- start About section -->
 	<section id="about" class="about about-timeline-style">
@@ -1508,13 +1485,13 @@
 							<div class="latest-pfolio">
 								<div class="col-xs-4 no-space">
 									<div class="portfolio-wrapper">
-										<img src="images/portfolio/thumb/3.jpg" alt="Portfolio Title">
+										<img src="images/portfolio/thumb/2.jpg" alt="Portfolio Title">
 										<div class="portfolio-overlay">
 											<div class="portfolio-overlay-inner">
 												<div class="portfolio-overlay-content">
 													<div class="portfolio-link">
 														<a title="Details" href="single-portfolio.html"><i class="fa fa-link"></i></a>
-														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/3.jpg"><i class="fa fa-search-plus"></i></a>
+														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/2.jpg"><i class="fa fa-search-plus"></i></a>
 													</div><!--End portfolio-link -->
 												</div><!--End portfolio-overlay-content -->
 											</div><!--End portfolio-overlay-inner -->
@@ -1523,13 +1500,13 @@
 								</div><!--End ./col- -->
 								<div class="col-xs-4 no-space">
 									<div class="portfolio-wrapper">
-										<img src="images/portfolio/thumb/6.jpg" alt="Portfolio Title">
+										<img src="images/portfolio/thumb/3.jpg" alt="Portfolio Title">
 										<div class="portfolio-overlay">
 											<div class="portfolio-overlay-inner">
 												<div class="portfolio-overlay-content">
 													<div class="portfolio-link">
 														<a title="Details" href="single-portfolio.html"><i class="fa fa-link"></i></a>
-														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/6.jpg"><i class="fa fa-search-plus"></i></a>
+														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/3.jpg"><i class="fa fa-search-plus"></i></a>
 													</div><!--End portfolio-link -->
 												</div><!--End portfolio-overlay-content -->
 											</div><!--End portfolio-overlay-inner -->
