--- a/index-5.html
+++ b/index-5.html
@@ -384,7 +384,7 @@
 	<!-- end About section -->
 	
 	<!-- start service -->
-	<section id="service" class="service service-3-column parallax">
+	<section id="service" class="service service-3-column light-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
@@ -666,7 +666,7 @@
 	<!-- end team -->
 	
 	<!-- start portfolio -->
-	<section id="portfolio" class="filter-section portfolio-style2 parallax">
+	<section id="portfolio" class="filter-section portfolio-style2 light-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
@@ -1135,7 +1135,7 @@
 	<!-- end blog -->
 	
 	<!-- start testimonials -->
-	<section id="testimonials" class="testimonials testimonial-single parallax">
+	<section id="testimonials" class="testimonials testimonial-single light-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
@@ -1269,7 +1269,7 @@
 	<!-- end clients -->
 	
 	<!-- start success-story -->
-	<section id="success-story" class="success-story parallax">
+	<section id="success-story" class="success-story light-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12">
@@ -1344,13 +1344,8 @@
 				</div><!-- end col -->
 			</div><!-- end row -->	
 			<!-- start contact section -->
-			<div class="row">
-				<div class="col-sm-6">
-					<!-- start title-box -->
-					<div class="title-box">
-						<h3 class="sub-title">Write <strong>Me</strong></h3>
-					</div>
-					<!-- end title-box -->
+			<div class="row">				
+				<div class="col-sm-8 col-sm-offset-2">
 					<form id="contactForm" name="contactform" data-toggle="validator" class="contact-form">
 						<div id="msgContactSubmit" class="hidden"></div>
 						<div class="form-group col-sm-12">
@@ -1379,61 +1374,10 @@
 						<span class="sub-text">* Required fields</span>
 						<div class="clearfix"></div>
 					</form><!-- end form -->
-				</div><!-- end col -->
-				
-				<div class="col-sm-6">
-					<!-- start title-box -->
-					<div class="title-box">
-						<h3 class="sub-title">Get Free <strong>Quote</strong></h3>
-					</div>
-					<!-- end title-box -->
-					<!-- strat quoteForm -->
-					<div id="serviceQuoteForm" class="hireme-holder">
-						<form id="quoteForm" name="free-quote" data-toggle="validator" class="quoteForm">
-							<div id="msgQuoteSubmit" class="hidden"></div>
-							<div class="form-group">
-								<div class="help-block with-errors"></div>
-								<input name="fname" id="quoteName" placeholder="Full Name*" class="form-control" required data-error="Please enter Name" type="text">
-								<div class="input-group-icon"><i class="fa fa-user"></i></div>
-							</div><!-- end form-group -->
-							<div class="form-group">
-								<div class="help-block with-errors"></div>
-								<input name="email" id="quoteEmail" placeholder="Email Address*" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" class="form-control" required data-error="Please enter valid Email" type="email"> 
-								<div class="input-group-icon"><i class="fa fa-envelope"></i></div>
-							</div><!-- end form-group -->
-							<div class="form-group">
-								<div class="help-block with-errors"></div>
-								<input name="phone" id="quotePhone" placeholder="Phone* Use Only Digit with/without + sign" class="form-control" required data-error="Please enter valid Phone" type="text">
-								<div class="input-group-icon"><i class="fa fa-phone"></i></div> 
-							</div><!-- end form-group -->
-							<div class="form-group">
-								<div class="help-block with-errors"></div>
-								<input name="address" id="address" placeholder="Address*" class="form-control" required data-error="Please enter Address" type="text">
-								<div class="input-group-icon"><i class="fa fa-map-marker"></i></div>
-							</div><!-- end form-group -->
-							<div class="form-group">
-								<div class="help-block with-errors"></div>
-								<select name="service" id="quoteService" class="form-control" required data-error="Please Select Service">
-									<option value="">--- Select a Sevice* ---</option>
-									<option value="Web Design">Web Design</option>
-									<option value="Graphic Design">Graphic Design</option>
-									<option value="Flash Design">Flash Design</option>
-									<option value="Photography">Photography</option>
-									<option value="App Devlopment">App Devlopment</option>
-									<option value="Support">Support</option>
-								</select>
-								<div class="input-group-icon"><i class="fa fa-cogs"></i></div> 
-							</div><!-- end form-group -->
-							<div class="form-group bottomMargin0">
-								<button type="submit" id="quoteSubmit" class="btn btn-shutter-out-horizontal disabled" style="pointer-events: all; cursor: pointer;">Send Request</button>									
-							</div>
-							<span class="sub-text">* Required fields</span>
-						</form><!-- end form -->
-					</div>
-					<!-- end quoteForm -->
-				</div><!-- end col -->
+				</div><!-- end col -->				
 			</div><!-- end row -->
 			<!-- end contact section -->
+			
 			<div class="row">	
 				<!-- start contact Info -->
 				<div class="col-sm-12 text-center">
@@ -1508,13 +1452,13 @@
 							<div class="latest-pfolio">
 								<div class="col-xs-4 no-space">
 									<div class="portfolio-wrapper">
-										<img src="images/portfolio/thumb/3.jpg" alt="Portfolio Title">
+										<img src="images/portfolio/thumb/2.jpg" alt="Portfolio Title">
 										<div class="portfolio-overlay">
 											<div class="portfolio-overlay-inner">
 												<div class="portfolio-overlay-content">
 													<div class="portfolio-link">
 														<a title="Details" href="single-portfolio.html"><i class="fa fa-link"></i></a>
-														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/3.jpg"><i class="fa fa-search-plus"></i></a>
+														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/2.jpg"><i class="fa fa-search-plus"></i></a>
 													</div><!--End portfolio-link -->
 												</div><!--End portfolio-overlay-content -->
 											</div><!--End portfolio-overlay-inner -->
@@ -1523,13 +1467,13 @@
 								</div><!--End ./col- -->
 								<div class="col-xs-4 no-space">
 									<div class="portfolio-wrapper">
-										<img src="images/portfolio/thumb/6.jpg" alt="Portfolio Title">
+										<img src="images/portfolio/thumb/3.jpg" alt="Portfolio Title">
 										<div class="portfolio-overlay">
 											<div class="portfolio-overlay-inner">
 												<div class="portfolio-overlay-content">
 													<div class="portfolio-link">
 														<a title="Details" href="single-portfolio.html"><i class="fa fa-link"></i></a>
-														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/6.jpg"><i class="fa fa-search-plus"></i></a>
+														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/3.jpg"><i class="fa fa-search-plus"></i></a>
 													</div><!--End portfolio-link -->
 												</div><!--End portfolio-overlay-content -->
 											</div><!--End portfolio-overlay-inner -->
