--- a/index-animated.html
+++ b/index-animated.html
@@ -21,6 +21,8 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Lightbox Stylesheets -->
 	<link rel="stylesheet" href="css/lightbox.min.css">
+	<!-- Animate Stylesheets -->
+	<link rel="stylesheet" href="css/animate.css" type="text/css">
 	<!-- Parallax Stylesheets -->
 	<link rel="stylesheet" href="css/parallax.css" type="text/css">
 	<!-- Template Main Stylesheets -->
@@ -72,14 +74,15 @@
 	<!-- start slider and home section -->
 	<section id="home" class="home">
         <div class="home-top-banner banner-1">
+			<div id="particles-js"></div>
             <div class="display-table">
                 <div class="display-table-cell">
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-12">
 								<div class="banner-content banner-content-fullwidth">
-									<h3>Hi, I'm</h3>
-									<h1 class="header-title-text type-animate">
+									<h3 class="wow slideInLeft">Hi, I'm</h3>
+									<h1 class="header-title-text type-animate wow slideInRight">
 										<a href="" class="typewrite" data-period="2000" data-type='[ "Emma Jones", "Proffessional", "Creative Director", "From United States" ]'>
 										<span class="wrap"></span>
 										</a>&nbsp;
@@ -138,7 +141,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">About <strong>Me</strong></h2>
 						</div><!-- end section-title-box -->
@@ -205,9 +208,9 @@
 								<li class="timeline-right">
 									<div class="timeline-badge">
 										<i class="fa fa-calendar"></i>
-										<p class="date-inverted">Dec 2016 - Current</p>
+										<p class="date-inverted wow slideInLeft">Dec 2016 - Current</p>
 									</div><!-- end timeline-badge -->
-									<div class="timeline-panel">
+									<div class="timeline-panel wow slideInRight">
 										<div class="experience-content">
 											<h4>MGS PVT. LTD.</h4>
 											<h5>Creative Director</h5>
@@ -218,9 +221,9 @@
 								<li class="timeline-left">
 									<div class="timeline-badge">
 										<i class="fa fa-calendar"></i>								
-										<p class="date">Oct 2015 - Nov 2016</p>
+										<p class="date wow slideInRight">Oct 2015 - Nov 2016</p>
 									</div><!-- end timeline-badge -->
-									<div class="timeline-panel">
+									<div class="timeline-panel wow slideInLeft">
 										<div class="experience-content">
 											<h4>MGS PVT. LTD.</h4>
 											<h5>Senior Designer </h5>
@@ -231,9 +234,9 @@
 								<li class="timeline-right">
 									<div class="timeline-badge">
 										<i class="fa fa-calendar"></i>
-										<p class="date-inverted">Sep 2013 - Sep 2015</p>
+										<p class="date-inverted wow slideInLeft">Sep 2013 - Sep 2015</p>
 									</div><!-- end timeline-badge -->
-									<div class="timeline-panel">
+									<div class="timeline-panel wow slideInRight">
 										<div class="experience-content">
 											<h4>MGS PVT. LTD.</h4>
 											<h5>Designer</h5>
@@ -389,7 +392,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">My  <strong>Services</strong></h2>
 						</div><!-- end section-title-box -->
@@ -506,7 +509,7 @@
 			<div class="row" >
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">My  <strong>Team</strong></h2>
 						</div><!-- end section-title-box -->
@@ -671,7 +674,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">Portfolio  <strong>Gallery</strong></h2>
 						</div><!-- end section-title-box -->
@@ -854,7 +857,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">Pricing  <strong>Plan</strong></h2>
 						</div><!-- end section-title-box -->
@@ -867,7 +870,7 @@
 			</div><!-- end row -->	
 			<div class="row">
 				<div class="col-sm-4">
-					<div class="pricing-plan-wrap">
+					<div class="pricing-plan-wrap wow slideInLeft">
 						<div class="pricing-plan-header">
 							<h3>Starter</h3>
 							<div class="price-holder">
@@ -885,7 +888,7 @@
 					</div><!-- end pricing-plan-wrap -->
 				</div><!-- end pricing-plan -->
 				<div class="col-sm-4">
-					<div class="pricing-plan-wrap active">
+					<div class="pricing-plan-wrap active wow zoomIn">
 						<div class="pricing-plan-header">
 							<h3>Standard</h3>
 							<div class="price-holder">
@@ -903,7 +906,7 @@
 					</div><!-- end pricing-plan-wrap -->
 				</div><!-- end pricing-plan -->
 				<div class="col-sm-4">
-					<div class="pricing-plan-wrap">
+					<div class="pricing-plan-wrap wow slideInRight">
 						<div class="pricing-plan-header">
 							<h3>Premium</h3>
 							<div class="price-holder">
@@ -932,7 +935,7 @@
 				<div class="col-md-12">
 					<div class="quotes-wrap text-center">
 						<!-- start section title-wrap -->
-						<div class="title-wrap">
+						<div class="title-wrap wow zoomIn">
 							<div class="section-title-box">
 								<h2 class="section-title">Let's Work  <strong>Together</strong></h2>
 							</div><!-- end section-title-box -->
@@ -953,7 +956,7 @@
 			<div class="row">	
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">Blog  <strong>Post</strong></h2>
 						</div><!-- end section-title-box -->
@@ -1140,7 +1143,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">What  <strong>Client Say!</strong></h2>
 						</div><!-- end section-title-box -->
@@ -1215,7 +1218,7 @@
 			<div class="row">				
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">My  <strong>Clients</strong></h2>
 						</div><!-- end section-title-box -->
@@ -1274,7 +1277,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">Success  <strong>Story</strong></h2>
 						</div><!-- end section-title-box -->
@@ -1332,7 +1335,7 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<!-- start section title-wrap -->
-					<div class="title-wrap">
+					<div class="title-wrap wow zoomIn">
 						<div class="section-title-box">
 							<h2 class="section-title">Wanna  <strong>Talk</strong></h2>
 						</div><!-- end section-title-box -->
@@ -1508,13 +1511,13 @@
 							<div class="latest-pfolio">
 								<div class="col-xs-4 no-space">
 									<div class="portfolio-wrapper">
-										<img src="images/portfolio/thumb/3.jpg" alt="Portfolio Title">
+										<img src="images/portfolio/thumb/2.jpg" alt="Portfolio Title">
 										<div class="portfolio-overlay">
 											<div class="portfolio-overlay-inner">
 												<div class="portfolio-overlay-content">
 													<div class="portfolio-link">
 														<a title="Details" href="single-portfolio.html"><i class="fa fa-link"></i></a>
-														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/3.jpg"><i class="fa fa-search-plus"></i></a>
+														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/2.jpg"><i class="fa fa-search-plus"></i></a>
 													</div><!--End portfolio-link -->
 												</div><!--End portfolio-overlay-content -->
 											</div><!--End portfolio-overlay-inner -->
@@ -1523,13 +1526,13 @@
 								</div><!--End ./col- -->
 								<div class="col-xs-4 no-space">
 									<div class="portfolio-wrapper">
-										<img src="images/portfolio/thumb/6.jpg" alt="Portfolio Title">
+										<img src="images/portfolio/thumb/3.jpg" alt="Portfolio Title">
 										<div class="portfolio-overlay">
 											<div class="portfolio-overlay-inner">
 												<div class="portfolio-overlay-content">
 													<div class="portfolio-link">
 														<a title="Details" href="single-portfolio.html"><i class="fa fa-link"></i></a>
-														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/6.jpg"><i class="fa fa-search-plus"></i></a>
+														<a data-lightbox="recentwork" data-title="Image Preview" href="images/portfolio/3.jpg"><i class="fa fa-search-plus"></i></a>
 													</div><!--End portfolio-link -->
 												</div><!--End portfolio-overlay-content -->
 											</div><!--End portfolio-overlay-inner -->
@@ -1623,6 +1626,11 @@
 	<script src="js/jquery-3.4.1.min.js"></script>
 	<!-- Bootstrap Js -->
 	<script src="js/bootstrap.min.js"></script>
+	<!-- Particles JS -->
+	<script src="js/particles.min.js"></script>
+	<script src="js/app.js"></script>
+	<!-- wow Js -->
+	<script src="js/wow.min.js"></script>
 	<!-- Circle Progress Js -->
 	<script src="js/circle-progress.js"></script>
 	<!-- Isotope Filtring Js -->
@@ -1640,6 +1648,9 @@
 	<script src="js/jquery.counterup.min.js"></script>
 	<!-- Template main Js -->
 	<script src="js/main.js"></script>
+	<script>
+		var wow = new WOW({});wow.init();
+	</script>
 	
 </body>
 </html>
