--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 										<i class="fa fa-envelope"></i>
 									</div>
 									<div class="contact-desc">
-										<h4><a href="mailto:sales@yourwebsite.com">shettyarun.1999@gmail.com</a></h4>
+										<h4><a href="mailto:shettyarun.1999@gmail.com">shettyarun.1999@gmail.com</a></h4>
 									</div>
 								</div><!-- end contact-item-inner -->
 							</div><!-- end contact-item --> 
@@ -528,7 +528,7 @@
 										<i class="fa fa-phone"></i>
 									</div>
 									<div class="contact-desc">
-										<h4><a href="tel:000-0000-0000">+91 8971632243</a></h4>
+										<h4><a href="tel:+918971632243">+91 8971632243</a></h4>
 									</div>
 								</div><!-- end contact-item-inner --> 
 							</div><!-- end contact-item --> 
@@ -572,7 +572,7 @@
 							<ul class="contact-info list-unstyled">
 								<li><i class="fa fa-home"></i> At-kudavalli, post-kallabbe, tq-kumta, dist-uttara kannada, pin-581362</li>
 								<li><i class="fa fa-phone"></i> <a href="tel:+91 8971632243">+91 8971632243</a></li>
-								<li><i class="fa fa-envelope"></i> <a href="mailto:shettyarun.1999@gmail.com">sales@yourwebsite.com</a></li>
+								<li><i class="fa fa-envelope"></i> <a href="mailto:shettyarun.1999@gmail.com">shettyarun.1999@gmail.com.com</a></li>
 							</ul><!-- end contact-info  -->
 							
 							<ul class="list-inline list-social clearfix">
