--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -49,7 +49,7 @@
 							</div><!--End navbar-header -->
 							<div id="navbar" class="navbar-collapse collapse">
 								<ul class="nav navbar-nav navbar-right">
-									<li><a class="menubgactive" href="index-6.html">Back To Home</a></li>
+									<li><a class="menubgactive" href="index.html">Back To Home</a></li>
 								</ul>
 							</div><!--End navbar -->
 						</nav>
