--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -98,7 +98,7 @@
 						The most common types of recommendation systems are content-based and collaborative filtering recommender systems. In collaborative filtering, the behavior of a group of users is used to make recommendations to other users. The recommendation is based on the preference of other users. A simple example would be recommending a movie to a user based on the fact that their friend liked the movie. There are two types of collaborative models Memory-based methods and Model-based methods. The advantage of memory-based techniques is that they are simple to implement and the resulting recommendations are often easy to explain</p>
 					</div><!-- end portfolio-content -->
 					
-					<a class="btn btn-project btn-shutter-out-horizontal" href="media/omrs..pdf" target="_blank">Go To Project</a>
+					<a class="btn btn-project btn-shutter-out-horizontal" href="media/omrs..pdf" target="_blank">Go To Project Report</a>
 					
 					<!-- start share-icon -->	
 					<div class="share-icon">
